5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1578_579.log
== SUBMITION (2019-03-27 19:08:47) 
-- CODE:
print("A UFAM tem", 2016 - XXXX, "anos de fundacao.")


-- EXECUTION TIME:
0.223568
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - XXXX, "anos de fundacao.")
NameError: name 'XXXX' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:08:56) 
-- CODE:
print("A UFAM tem", 2016 - XXXX, "anos de fundacao.")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("A UFAM tem", 2016 - XXXX, "anos de fundacao.")
NameError: name 'XXXX' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:30:27) 
-- CODE:
print("A UFAM tem", 2019 -1909, "anos de fundacao.")
-- EXECUTION TIME:
0.215442
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:30:29) 
-- CODE:
print("A UFAM tem", 2019 -1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:30:29) 
-- CODE:
print("A UFAM tem", 2019 -1909, "anos de fundacao.")
-- EXECUTION TIME:
0.136139
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:30:29) 
-- CODE:
print("A UFAM tem", 2019 -1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:30:30) 
-- CODE:
print("A UFAM tem", 2019 -1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:30:31) 
-- CODE:
print("A UFAM tem", 2019 -1909, "anos de fundacao.")
-- EXECUTION TIME:
0.116867
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:30:53) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundacao.")
-- EXECUTION TIME:
0.135064
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
